--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="StyleSheets/style.css">
 </head>
 <body>
   
@@ -81,7 +81,7 @@
   </div>
 </div>
 
-<script src="./typed.js-master/lib/typed.min.js"></script>
-<script src="script.js"></script>
+<script src="/Scripts/typed.js-master/lib/typed.min.js"></script>
+<script src="/Scripts/script.js"></script>
 </body>
 </html>
