--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3">
-        <img style="width: 250px; height: 250px; padding-bottom: 20px;"src="../Seyfo.png" alt="">
+        <img style="width: 250px; height: 250px; padding-bottom: 20px;"src="Other/Seyfo.png" alt="">
       </div>
       <div class="col-md-4">
         <h3>DevSeyfo</h3>
@@ -78,10 +78,17 @@
         </ul>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-12">
+        <hr>
+      </div>
+      <div class="col-md-12">
+        <p class="text-center">© 2021 DevSeyfo. All Rights Reserved.</p>
+      </div>
   </div>
 </div>
 
-<script src="/Scripts/typed.js-master/lib/typed.min.js"></script>
-<script src="/Scripts/script.js"></script>
+<script src="Scripts/typed.js-master/lib/typed.min.js"></script>
+<script src="Scripts/script.js"></script>
 </body>
 </html>
