--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <title>DevSeyfo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="Other/Seyfo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -25,97 +26,86 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Our Works</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="our-works.html">Our Works</a></li>
+            <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
       </nav>
     </header>
-
-    <div class="container" style="margin-top: 120px; color: brown">
+    <div class="container" style="margin-top: 120px;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center">Contact Me</h1>
+          <h1 class="text-center" style="color: brown">Contact Us</h1>
+          <hr style="border-top: 1px solid #8c8b8b;">
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <form action="contact.php" method="post">
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input type="text" class="form-control" name="name" id="name" placeholder="Enter your name">
+          <div class="contact text-center">
+            <a href="https://www.facebook.com/seyfo.dev"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/seyfo.dev/"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/seyfo-dev/"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-youtube"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-snapchat"></i></a>         
+            <a href="#"><i class="fa fa-spotify"></i></a>
+            <a href="#"><i class="fa fa-github"></i></a>
+           </div>
+           <hr style="border-top: 1px solid #8c8b8b;">
+           <!-- contact adress -->
+            <div class="row" style="color: #c5c5c5">
+              <div class="col-md-12">
+                <h3 class="text-center">Contact Adress</h3>
+                <p class="text-center">Seyfo Dev</p>
+                <p class="text-center">Kayseri/Turkey</p>
+                <p class="text-center">
+                  <a href="tel:905555555555">+90 555 555 55 55</a>
+                </p>
+                <p class="text-center">
+                  <a href="mailto:sefagk29@gmail.com">sefagk29@gmail.com</a>
+                </p>
+              </div>
             </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" name="email" id="email" placeholder="Enter your email">
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea class="form-control" name="message" id="message" rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-        <div class="col-md-6">
-          <h3>My Social Media</h3>
-          <div class="row">
-            <div class="col-md-12">
-           
-                    <a href="https://www.facebook.com/seyfo.dev"><i class="fa fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/seyfo.dev/"><i class="fa fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/seyfo-dev/"><i class="fa fa-linkedin"></i></a>
-                    <a href="#"><i class="fa fa-youtube"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-snapchat"></i></a>
-                    <a href="#"><i class="fa fa-github"></i></a>
-                    <a href="#"><i class="fa fa-spotify"></i></a>
-            
+          <div class="footer" style="margin-top: 400px;">
 
-            </div>
-        </div>
-        </div>
-        </div>
-    </div>
-
-    <div class="footer" style="margin-top: 400px;">
-
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3">
-              <img style="width: 250px; height: 250px; padding-bottom: 20px;"src="Other/Seyfo.png" alt="">
-            </div>
-            <div class="col-md-4">
-              <h3>DevSeyfo</h3>
-              <p>DevSeyfo is a software development company that provides services such as software development, graphic design, server management and more.</p>
-            </div>
-            <div class="col-md-2">
-              <h3>Quick Links</h3>
-              <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">My Works</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-            </div>
-            <div class="col-md-2">
-              <h3>Follow Us</h3>
-              <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Instagram</a></li>
-              </ul>
+            <div class="container">
+              <div class="row">
+                <div class="col-md-3">
+                  <img style="width: 250px; height: 250px; padding-bottom: 20px;"src="Other/Seyfo.png" alt="">
+                </div>
+                <div class="col-md-4">
+                  <h3>DevSeyfo</h3>
+                  <p>DevSeyfo is a software development company that provides services such as software development, graphic design, server management and more.</p>
+                </div>
+                <div class="col-md-2">
+                  <h3>Quick Links</h3>
+                  <ul>
+                    <li><a href="aboutus.html">About Us</a></li>
+                    <li><a href="our-works.html">Our Works</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                  </ul>
+                </div>
+                <div class="col-md-2">
+                  <h3>Follow Us</h3>
+                  <ul>
+                    <li><a href="https://github.com/sefagkdmr" target="_blank">Github</a></li>
+                    <li><a href="https://twitter.com/sefa_gkdmr" target="_blank">Twitter</a></li>
+                    <li><a href="https://instagram.com/sefa_gkdmr" target="_blank">Instagram</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <hr>
+                </div>
+                <div class="col-md-12">
+                  <p class="text-center">© 2023 DevSeyfo. All Rights Reserved.</p>
+                  <p class="text-center"> DevSeyfo By Sefa Gökdemir </p>
+                </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              <hr>
-            </div>
-            <div class="col-md-12">
-              <p class="text-center">© 2023 DevSeyfo. All Rights Reserved.</p>
-            </div>
         </div>
-      </div>
 
-
+        <script src="Scripts/typed.js-master/lib/typed.min.js"></script>
+        <script src="Scripts/script.js"></script>
 </body>
 </html>
