--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>DevSeyfo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="Other/Seyfo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -25,8 +26,8 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Our Works</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="our-works.html">Our Works</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </div>
@@ -38,11 +39,11 @@
     <i id="ucgen"></i>
   </a>
 <div class="collapse" id="s-bars">
-  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-  <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-  <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-  <a href="#" class="github"><i class="fa fa-github"></i></a>
-  <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+  <a href="https://facebook.com/devseyfo" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
+  <a href="https://twitter.com/sefa_gkdmr" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+  <a href="https://instagram.com/sefa_gkdmr" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a>
+  <a href="https://github.com/sefagkdmr" target="_blank" class="github"><i class="fa fa-github"></i></a>
+  <a href="https://youtube.com/sefagökdemir" target="_blank" class="youtube"><i class="fa fa-youtube"></i></a>
 </div>
 </div>
 <div class="heading">
@@ -85,17 +86,17 @@
       <div class="col-md-2">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="#">About Me</a></li>
-          <li><a href="#">My Works</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+          <li><a href="our-works.html">Our Works</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
       <div class="col-md-2">
         <h3>Follow Us</h3>
         <ul>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Instagram</a></li>
+          <li><a href="https://github.com/sefagkdmr" target="_blank">Github</a></li>
+          <li><a href="https://twitter.com/sefa_gkdmr" target="_blank">Twitter</a></li>
+          <li><a href="https://instagram.com/sefa_gkdmr" target="_blank">Instagram</a></li>
         </ul>
       </div>
     </div>
