--- a/our-works.html
+++ b/our-works.html
@@ -3,18 +3,16 @@
     <head>
         <title>DevSeyfo</title>
         <meta charset="utf-8">
-        <link rel="icon" href="Other/Seyfo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="Other/Seyfo.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="StyleSheets/style.css">
-        <script src="Scripts/typed.js-master/lib/typed.min.js"></script>
-<script src="Scripts/script.js"></script>
-    </head>
 
+    </head>
     <body>
         <header>
             <nav class="navbar navbar-inverse" style="color:white !important">
@@ -24,46 +22,66 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>                        
                     </button>
-                    <a class="navbar-brand" style="color: white;" href="index.html">Main</a>
+                    <a class="navbar-brand" style="color: white;" href="#">Main</a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="aboutus.html">About Us</a></li>
-                  <li><a href="our-works.html">Our Works</a></li>
+                  <li><a href="#">Our Works</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
             </nav>
-         </header>
+          </header>
 
-         <div class="icon-bars">
-          <a class="toggle" style="background: #585757" data-toggle="collapse" data-target="#s-bars">
-            <i id="ucgen"></i>
-          </a>
-        <div class="collapse" id="s-bars">
-          <a href="https://facebook.com/devseyfo" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
-          <a href="https://twitter.com/sefa_gkdmr" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
-          <a href="https://instagram.com/sefa_gkdmr" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a>
-          <a href="https://github.com/sefagkdmr" target="_blank" class="github"><i class="fa fa-github"></i></a>
-          <a href="https://youtube.com/sefagökdemir" target="_blank" class="youtube"><i class="fa fa-youtube"></i></a>
-        </div>
-        </div>
-
-        <div class="container-fluid" style="opacity: 0.85;">
+        <div class="icon-bars">
+            <a class="toggle" style="background: #585757" data-toggle="collapse" data-target="#s-bars">
+              <i id="ucgen"></i>
+            </a>
+          <div class="collapse" id="s-bars">
+            <a href="https://facebook.com/devseyfo" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/sefa_gkdmr" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+            <a href="https://instagram.com/sefa_gkdmr" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a>
+            <a href="https://github.com/sefagkdmr" target="_blank" class="github"><i class="fa fa-github"></i></a>
+            <a href="https://youtube.com/sefagökdemir" target="_blank" class="youtube"><i class="fa fa-youtube"></i></a>
+          </div>
+          </div>
+        <div class="container" style="margin-top: 100px;">
             <div class="row">
-                <div class="col-sm-12">
-                    <div class="jumbotron" style="margin-left:10%; margin-right: 10%; margin-top: 10%;">
-                        <center><h1>About Us</h1></center>
-                        <p>DevSeyfo is an organization that provides services in various fields such as software developed by Sefa Gökdemir, server management, graphic design.
-                          <br><br>
-                          <strong>Who is Sefa Gokdemir?</strong>
-                          <br><br>
-                          Sefa Gökdemir is a student who continues her active education life at Ankara Yıldırım Beyazıt University, Faculty of Technical Sciences, Computer Programming Department. She was born in Develi, Kayseri in May 2003. she is very interested in software, she develops herself in front-end, back-end, C, JavaScript, Java, Python.
-                        </p>
+                <div class="col-md-4">
+                    <div class="thumbnail" >
+                        <a href="#">
+                            <img src="Other/Seyfo.png" alt="DevSeyfo" >
+                            <div class="caption">
+                                <p>DevSeyfo Project #1</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <a href="#">
+                            <img src="Other/Seyfo.png" alt="DevSeyfo">
+                            <div class="caption">
+                                <p>DevSeyfo Project #2</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <a href="#">
+                            <img src="Other/Seyfo.png" alt="DevSeyfo">
+                            <div class="caption">
+                                <p>DevSeyfo Project #3</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
+
+
 
         <div class="footer">
 
@@ -78,10 +96,11 @@
                 </div>
                 <div class="col-md-2">
                   <h3>Quick Links</h3>
-                  
-                    <li><a href="#">About Us</a></li>
+                  <ul>
+                    <li><a href="aboutus.html">About Us</a></li>
                     <li><a href="our-works.html">Our Works</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
+                  </ul>
                 </div>
                 <div class="col-md-2">
                   <h3>Follow Us</h3>
@@ -102,11 +121,10 @@
                 </div>
             </div>
           </div>
-
         </div>
 
-<script src="Scripts/typed.js-master/lib/typed.min.js"></script>
-<script src="Scripts/script.js"></script>
-</body>
-</html>
+        <script src="Scripts/typed.js-master/lib/typed.min.js"></script>
+        <script src="Scripts/script.js"></script>
 
+    </body>
+</html>
