--- a/aboutus.html
+++ b/aboutus.html
@@ -11,8 +11,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="StyleSheets/style.css">
-        <script src="Scripts/typed.js-master/lib/typed.min.js"></script>
-<script src="Scripts/script.js"></script>
     </head>
 
     <body>
@@ -49,10 +47,10 @@
         </div>
         </div>
 
-        <div class="container-fluid" style="opacity: 0.85;">
+        <div class="container-fluid" style="opacity: 0.85; margin-left: 10%; margin-right: 10%; margin-top: 10%;">
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="jumbotron" style="margin-left:10%; margin-right: 10%; margin-top: 10%;">
+                    <div class="jumbotron">
                         <center><h1>About Us</h1></center>
                         <p>DevSeyfo is an organization that provides services in various fields such as software developed by Sefa Gökdemir, server management, graphic design.
                           <br><br>
@@ -107,6 +105,7 @@
 
 <script src="Scripts/typed.js-master/lib/typed.min.js"></script>
 <script src="Scripts/script.js"></script>
+<script src="Scripts/aboutus.js"></script>
 </body>
 </html>
 
