--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,14 @@
         </div>
       </div>
           <div class="contact text-center">
-            <a href="https://www.facebook.com/seyfo.dev"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.instagram.com/seyfo.dev/"><i class="fa fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/seyfo-dev/"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-youtube"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-snapchat"></i></a>         
-            <a href="#"><i class="fa fa-spotify"></i></a>
-            <a href="#"><i class="fa fa-github"></i></a>
+            <a href="https://facebook.com/devseyfo" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="https://instagram.com/sefa_gkdmr/" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="https://instagram.com/devseyfo" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="https://linkedin.com/in/sefagkdmr" target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a href="https://youtube.com/sefagökdemir" target="_blank"><i class="fa fa-youtube"></i></a>
+            <a href="https://twitter.com/sefa_gkdmr" target="_blank"><i class="fa fa-twitter"></i></a>        
+            <a href="https://github.com/sefagkdmr" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="mailto:sefagk29@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
            </div>
            <hr style="border-top: 1px solid #8c8b8b;">
            <!-- contact adress -->
@@ -107,5 +107,6 @@
 
         <script src="Scripts/typed.js-master/lib/typed.min.js"></script>
         <script src="Scripts/script.js"></script>
+        <script src="Scripts/contact.js"></script>
 </body>
 </html>
