--- a/our-works.html
+++ b/our-works.html
@@ -33,19 +33,13 @@
               </div>
             </nav>
           </header>
-
-        <div class="icon-bars">
-            <a class="toggle" style="background: #585757" data-toggle="collapse" data-target="#s-bars">
-              <i id="ucgen"></i>
-            </a>
-          <div class="collapse" id="s-bars">
-            <a href="https://facebook.com/devseyfo" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
-            <a href="https://twitter.com/sefa_gkdmr" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
-            <a href="https://instagram.com/sefa_gkdmr" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a>
-            <a href="https://github.com/sefagkdmr" target="_blank" class="github"><i class="fa fa-github"></i></a>
-            <a href="https://youtube.com/sefagökdemir" target="_blank" class="youtube"><i class="fa fa-youtube"></i></a>
-          </div>
-          </div>
+        <div class="container" style="margin-top: 50px;">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="text-center" style="color:#c5c5c5">Our Works</h1>
+                </div>
+            </div>
+        </div>
         <div class="container" style="margin-top: 100px;">
             <div class="row">
                 <div class="col-md-4">
@@ -98,7 +92,7 @@
                   <h3>Quick Links</h3>
                   <ul>
                     <li><a href="aboutus.html">About Us</a></li>
-                    <li><a href="our-works.html">Our Works</a></li>
+                    <li><a href="#">Our Works</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                   </ul>
                 </div>
@@ -125,6 +119,7 @@
 
         <script src="Scripts/typed.js-master/lib/typed.min.js"></script>
         <script src="Scripts/script.js"></script>
+        <script src="Scripts/ourworks.js"></script>
 
     </body>
 </html>
