--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
     <div class="c-button1" onclick="yonlendir()">
       Contact Us
     </div>
-
-  </div>
+    </div>
+    <div class="c-button" style="margin-bottom: 70px;">
+    <div class="c-button1" onclick="scriptOdev()">
+      Script Odev
+    </div>
+    </div>
     <h5>
       <span id="rand-text"></span>
     </h5>
@@ -113,5 +117,6 @@
 
 <script src="Scripts/typed.js-master/lib/typed.min.js"></script>
 <script src="Scripts/script.js"></script>
+<script src="Scripts/index.js"></script>
 </body>
 </html>
