--- a/aboutus.html
+++ b/aboutus.html
@@ -56,7 +56,7 @@
                           <br><br>
                           <strong>Who is Sefa Gokdemir?</strong>
                           <br><br>
-                          Sefa Gökdemir is a student who continues her active education life at Ankara Yıldırım Beyazıt University, Faculty of Technical Sciences, Computer Programming Department. She was born in Develi, Kayseri in May 2003. she is very interested in software, she develops herself in front-end, back-end, C, JavaScript, Java, Python.
+                          Sefa Gökdemir is a student who continues her active education life at Ankara Yıldırım Beyazıt University, Faculty of Technical Sciences, Computer Programming Department. He was born in Develi, Kayseri in May 2003. he is very interested in software, he develops herself in front-end, back-end, C, JavaScript, Java, Python.
                         </p>
                     </div>
                 </div>
