--- a/our-works.html
+++ b/our-works.html
@@ -22,7 +22,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>                        
                     </button>
-                    <a class="navbar-brand" style="color: white;" href="#">Main</a>
+                    <a class="navbar-brand" style="color: white;" href="index.html">Main</a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
