--- a/aboutus.html
+++ b/aboutus.html
@@ -56,11 +56,23 @@
                           <br><br>
                           <strong>Who is Sefa Gokdemir?</strong>
                           <br><br>
-                          Sefa Gökdemir is a student who continues her active education life at Ankara Yıldırım Beyazıt University, Faculty of Technical Sciences, Computer Programming Department. He was born in Develi, Kayseri in May 2003. he is very interested in software, he develops herself in front-end, back-end, C, JavaScript, Java, Python.
+                          <a class="seyfo" onclick="seyfoModal()">Sefa Gökdemir</a> is a student who continues her active education life at Ankara Yıldırım Beyazıt University, Faculty of Technical Sciences, Computer Programming Department. He was born in Develi, Kayseri on May 2003. he is very interested in software, he develops himself in front-end, back-end, C, JavaScript, Java, Python.
                         </p>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!--Modal with images in slider animation-->
+
+        <div id="modal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <center><h1>Sefa Gökdemir</h1>
+            <img class="sefagk" src="Other/Sefagk.PNG" alt="Seyfo" width="25%">
+            <br><br>
+            </center>
+          </div>
         </div>
 
         <div class="footer">
