--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
     </h5>
   </div>
 
+  <!--modal-->
+
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>Ödev İçeriği</p>
+      <button>Ödev için buton</button>
+    </div>
+  </div>
+
 
 <div class="footer">
 
@@ -118,5 +128,6 @@
 <script src="Scripts/typed.js-master/lib/typed.min.js"></script>
 <script src="Scripts/script.js"></script>
 <script src="Scripts/index.js"></script>
+<script src="Scripts/Odev-Script.js"></script>
 </body>
 </html>
