added language options for end user

--- a/en/aboutus.html
+++ b/en/aboutus.html
@@ -3,14 +3,14 @@
     <head>
         <title>DevSeyfo</title>
         <meta charset="utf-8">
-        <link rel="icon" href="Other/Seyfo.png">
+        <link rel="icon" href="../Other/Seyfo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="StyleSheets/style.css">
+        <link rel="stylesheet" type="text/css" href="../StyleSheets/style.css">
     </head>
 
     <body>
@@ -22,13 +22,21 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>                        
                     </button>
-                    <a class="navbar-brand" style="color: white;" href="index.html">Main</a>
+                    <a class="navbar-brand" style="color: white;" href="main.html">Main</a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="aboutus.html">About Us</a></li>
                   <li><a href="our-works.html">Our Works</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
+                  <li>
+                    <div class="dropdown">
+                      <button class="dropbtn">EN</button>
+                      <div class="dropdown-content">
+                        <a href="../tr/hakkimizda.html">Turkish</a>
+                      </div>
+                    </div>
+                  </li>
                 </ul>
               </div>
             </nav>
@@ -69,7 +77,7 @@
           <div class="modal-content">
             <span class="close">&times;</span>
             <center><h1>Sefa Gökdemir</h1>
-            <img class="sefagk" src="Other/Sefagk.PNG" alt="Seyfo" width="25%">
+            <img class="sefagk" src="../Other/Sefagk.PNG" alt="Seyfo" width="25%">
             <br><br>
             </center>
           </div>
@@ -115,9 +123,9 @@
 
         </div>
 
-<script src="Scripts/typed.js-master/lib/typed.min.js"></script>
-<script src="Scripts/script.js"></script>
-<script src="Scripts/aboutus.js"></script>
+<script src="../Scripts/typed.js-master/lib/typed.min.js"></script>
+<script src="../Scripts/script.js"></script>
+<script src="../Scripts/aboutus.js"></script>
 </body>
 </html>
 
