--- a/en/contact.html
+++ b/en/contact.html
@@ -4,13 +4,13 @@
   <title>DevSeyfo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="Other/Seyfo.png">
+  <link rel="icon" href="../Other/Seyfo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="StyleSheets/style.css">
+  <link rel="stylesheet" type="text/css" href="../StyleSheets/style.css">
 </head>
 <body>
 
@@ -22,13 +22,21 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>                        
               </button>
-              <a class="navbar-brand" style="color: white;" href="index.html">Main</a>
+              <a class="navbar-brand" style="color: white;" href="main.html">Main</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="aboutus.html">About Us</a></li>
             <li><a href="our-works.html">Our Works</a></li>
             <li><a href="#">Contact Us</a></li>
+            <li>
+              <div class="dropdown">
+                <button class="dropbtn">EN</button>
+                <div class="dropdown-content">
+                  <a href="../tr/iletisim.html">Turkish</a>
+                </div>
+              </div>
+            </li>
           </ul>
         </div>
       </nav>
@@ -70,7 +78,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-3">
-                  <img style="width: 250px; height: 250px; padding-bottom: 20px;"src="Other/Seyfo.png" alt="">
+                  <img style="width: 250px; height: 250px; padding-bottom: 20px;"src="../Other/Seyfo.png" alt="">
                 </div>
                 <div class="col-md-4">
                   <h3>DevSeyfo</h3>
@@ -105,8 +113,8 @@
           </div>
         </div>
 
-        <script src="Scripts/typed.js-master/lib/typed.min.js"></script>
-        <script src="Scripts/script.js"></script>
-        <script src="Scripts/contact.js"></script>
+        <script src="../Scripts/typed.js-master/lib/typed.min.js"></script>
+        <script src="../Scripts/script.js"></script>
+        <script src="../Scripts/contact.js"></script>
 </body>
 </html>
