--- a/en/our-works.html
+++ b/en/our-works.html
@@ -4,13 +4,13 @@
         <title>DevSeyfo</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="Other/Seyfo.png">
+        <link rel="icon" href="../Other/Seyfo.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="StyleSheets/style.css">
+        <link rel="stylesheet" type="text/css" href="../StyleSheets/style.css">
 
     </head>
     <body>
@@ -22,13 +22,21 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>                        
                     </button>
-                    <a class="navbar-brand" style="color: white;" href="index.html">Main</a>
+                    <a class="navbar-brand" style="color: white;" href="main.html">Main</a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="aboutus.html">About Us</a></li>
                   <li><a href="#">Our Works</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
+                  <li>
+                    <div class="dropdown">
+                      <button class="dropbtn">EN</button>
+                      <div class="dropdown-content">
+                        <a href="../tr/calismalarimiz.html">Turkish</a>
+                      </div>
+                    </div>
+                  </li>
                 </ul>
               </div>
             </nav>
@@ -45,7 +53,7 @@
                 <div class="col-md-4">
                     <div class="thumbnail" >
                         <a href="#">
-                            <img src="Other/Seyfo.png" alt="DevSeyfo" >
+                            <img src="../Other/Seyfo.png" alt="DevSeyfo" >
                             <div class="caption">
                                 <p>DevSeyfo Project #1</p>
                             </div>
@@ -55,7 +63,7 @@
                 <div class="col-md-4">
                     <div class="thumbnail">
                         <a href="#">
-                            <img src="Other/Seyfo.png" alt="DevSeyfo">
+                            <img src="../Other/Seyfo.png" alt="DevSeyfo">
                             <div class="caption">
                                 <p>DevSeyfo Project #2</p>
                             </div>
@@ -65,7 +73,7 @@
                 <div class="col-md-4">
                     <div class="thumbnail">
                         <a href="#">
-                            <img src="Other/Seyfo.png" alt="DevSeyfo">
+                            <img src="../Other/Seyfo.png" alt="DevSeyfo">
                             <div class="caption">
                                 <p>DevSeyfo Project #3</p>
                             </div>
@@ -117,9 +125,9 @@
           </div>
         </div>
 
-        <script src="Scripts/typed.js-master/lib/typed.min.js"></script>
-        <script src="Scripts/script.js"></script>
-        <script src="Scripts/ourworks.js"></script>
+        <script src="../Scripts/typed.js-master/lib/typed.min.js"></script>
+        <script src="../Scripts/script.js"></script>
+        <script src="../Scripts/ourworks.js"></script>
 
     </body>
 </html>
