--- a/en/aboutus.html
+++ b/en/aboutus.html
@@ -60,7 +60,7 @@
                 <div class="col-sm-12">
                     <div class="jumbotron">
                         <center><h1>About Us</h1></center>
-                        <p>DevSeyfo is an organization that provides services in various fields such as software developed by Sefa Gökdemir, server management, graphic design.
+                        <p>DevSeyfo is an organization that provides services in various fields such as software development, server management, graphic design by Sefa Gökdemir.
                           <br><br>
                           <strong>Who is Sefa Gokdemir?</strong>
                           <br><br>
@@ -88,7 +88,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-3">
-                  <img style="width: 250px; height: 250px; padding-bottom: 20px;"src="Other/Seyfo.png" alt="">
+                  <img style="width: 250px; height: 250px; padding-bottom: 20px;"src="../Other/Seyfo.png" alt="">
                 </div>
                 <div class="col-md-4">
                   <h3>DevSeyfo</h3>
