--- a/en/our-works.html
+++ b/en/our-works.html
@@ -90,7 +90,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-3">
-                  <img style="width: 250px; height: 250px; padding-bottom: 20px;"src="Other/Seyfo.png" alt="">
+                  <img style="width: 250px; height: 250px; padding-bottom: 20px;"src="../Other/Seyfo.png" alt="">
                 </div>
                 <div class="col-md-4">
                   <h3>DevSeyfo</h3>
