--- a/en/main.html
+++ b/en/main.html
@@ -69,7 +69,7 @@
   
   <div class="rand-text">
     <div class="c-button" style="margin-bottom: 70px;">
-    <div class="c-button1" onclick="yonlendir()">
+    <div class="c-button1" onclick="yonlendir('contact.html')">
       Contact Us
     </div>
     </div>
