--- a/tr/iletisim.html
+++ b/tr/iletisim.html
@@ -26,9 +26,9 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="hakkimizda.html">About Us</a></li>
-            <li><a href="calismalarimiz.html">Our Works</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="hakkimizda.html">Hakkımızda</a></li>
+            <li><a href="calismalarimiz.html">Çalışmalarımız</a></li>
+            <li><a href="#">İletişim</a></li>
             <li>
               <div class="dropdown">
                 <button class="dropbtn">TR</button>
