--- a/en/main.html
+++ b/en/main.html
@@ -74,7 +74,7 @@
     </div>
     </div>
     <div class="c-button" style="margin-bottom: 70px;">
-    <div class="c-button1" onclick="scriptOdev()">
+    <div class="c-button1" onclick="yonlendir('../tr/js-odev.html')">
       Script Odev
     </div>
     </div>
