--- a/tr/calismalarimiz.html
+++ b/tr/calismalarimiz.html
@@ -22,7 +22,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>                        
                     </button>
-                    <a class="navbar-brand" style="color: white;" href="main.html">Ana Sayfa</a>
+                    <a class="navbar-brand" style="color: white;" href="anasayfa.html">Ana Sayfa</a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
