--- a/en/main.html
+++ b/en/main.html
@@ -1,3 +1,17 @@
+<!-- Developer: Seyfullah Sefa GÖKDEMİR
+    Okul Numarası: 22740111007
+    
+    #########     ##########   ###           ###   ##########   ##########   ##########   ##########
+    ##########    ##########    ###         ###    ##########   ##########   ##########   ##########
+    ##      ##    ##             ##         ##     ##           ##           ##           ##      ##
+    ##      ##    ##             ##         ##     ##           ##           ##           ##      ##
+    ##      ##    ########       ##         ##     ##########   ##########   ##########   ##      ##
+    ##      ##    ##             ###       ###             ##   ##           ##           ##      ##
+    ##      ##    ##              ####   ####              ##   ##           ##           ##      ##
+    ##########    ##########        ### ###       ###########   ##########   ##           ##########
+    #########     ##########          ###         ###########   ##########   ##           ##########
+-->
+
 <!DOCTYPE html>
 <html lang="Turkish">
 <head>
@@ -65,7 +79,6 @@
     <strong class="text-slider"></strong>
   </h3>
 </div>
- <!--contact button gray-->
   
   <div class="rand-text">
     <div class="c-button" style="margin-bottom: 70px;">
@@ -81,16 +94,6 @@
     <h5>
       <span id="rand-text"></span>
     </h5>
-  </div>
-
-  <!--modal-->
-
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <p>Ödev İçeriği</p>
-      <button>Ödev için buton</button>
-    </div>
   </div>
 
 
