--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<!-- Developer: Seyfullah Sefa GÖKDEMİR
+    Okul Numarası: 22740111007
+    
+    #########     ##########   ###           ###   ##########   ##########   ##########   ##########
+    ##########    ##########    ###         ###    ##########   ##########   ##########   ##########
+    ##      ##    ##             ##         ##     ##           ##           ##           ##      ##
+    ##      ##    ##             ##         ##     ##           ##           ##           ##      ##
+    ##      ##    ########       ##         ##     ##########   ##########   ##########   ##      ##
+    ##      ##    ##             ###       ###             ##   ##           ##           ##      ##
+    ##      ##    ##              ####   ####              ##   ##           ##           ##      ##
+    ##########    ##########        ### ###       ###########   ##########   ##           ##########
+    #########     ##########          ###         ###########   ##########   ##           ##########
+-->
+
+
 <!DOCTYPE html>
 <html lang="Turkish">
     <head>
@@ -14,7 +29,7 @@
     </head>
 
     <body>
-        <!--Choose language page-->
+        <!--Dil Seçme Sayfası-->
 
         <div class="container" style="margin-top: 100px; margin: auto;">
             <div class="row">
