--- a/tr/iletisim.html
+++ b/tr/iletisim.html
@@ -1,3 +1,18 @@
+<!-- Developer: Seyfullah Sefa GÖKDEMİR
+    Okul Numarası: 22740111007
+    
+    #########     ##########   ###           ###   ##########   ##########   ##########   ##########
+    ##########    ##########    ###         ###    ##########   ##########   ##########   ##########
+    ##      ##    ##             ##         ##     ##           ##           ##           ##      ##
+    ##      ##    ##             ##         ##     ##           ##           ##           ##      ##
+    ##      ##    ########       ##         ##     ##########   ##########   ##########   ##      ##
+    ##      ##    ##             ###       ###             ##   ##           ##           ##      ##
+    ##      ##    ##              ####   ####              ##   ##           ##           ##      ##
+    ##########    ##########        ### ###       ###########   ##########   ##           ##########
+    #########     ##########          ###         ###########   ##########   ##           ##########
+-->
+
+
 <!DOCTYPE html>
 <html lang="Turkish">
 <head>
