--- a/tr/hakkimizda.html
+++ b/tr/hakkimizda.html
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="jumbotron">
-                        <center><h1>About Us</h1></center>
+                        <center><h1>Hakkımızda</h1></center>
                         <p>DevSeyfo, Sefa Gökdemir tarafından geliştirilen; yazılım, sunucu yönetimi, grafik tasarım gibi çeşitli alanlarda hizmet veren bir kuruluştur.                          
                           <br><br>
                           <strong>Sefa Gökdemir Kimdir?</strong>
