--- a/tr/iletisim.html
+++ b/tr/iletisim.html
@@ -59,7 +59,7 @@
     <div class="container" style="margin-top: 120px;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center" style="color: brown">Contact Us</h1>
+          <h1 class="text-center" style="color: brown">Bizimle İletişime Geçin</h1>
           <hr style="border-top: 1px solid #8c8b8b;">
         </div>
       </div>
