--- a/tr/iletisim.html
+++ b/tr/iletisim.html
@@ -88,7 +88,8 @@
                 </p>
               </div>
             </div>
-          <div class="footer" style="margin-top: 400px;">
+            </div>
+          <div class="footer" style="margin-top: 250px;">
 
             <div class="container">
               <div class="row">
