--- a/en/contact.html
+++ b/en/contact.html
@@ -87,7 +87,8 @@
                 </p>
               </div>
             </div>
-          <div class="footer" style="margin-top: 400px;">
+            </div>
+          <div class="footer" style="margin-top: 250px;">
 
             <div class="container">
               <div class="row">
