--- a/en/our-works.html
+++ b/en/our-works.html
@@ -63,30 +63,30 @@
             </div>
         </div>
         <div class="container" style="margin-top: 100px;">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="thumbnail" >
-                        <a href="#">
-                            <img src="../Other/Seyfo.png" alt="DevSeyfo" >
-                            <div class="caption">
-                                <p>DevSeyfo Project #1</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+          <div class="row">
+              <div class="col-md-4">
+                  <div class="thumbnail" >
+                      <a href="https://taskium.dev" target="_blank">
+                          <img src="../Other/taskium.png" alt="DevSeyfo" >
+                          <div class="caption">
+                              <p>Taskium Development</p>
+                          </div>
+                      </a>
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="thumbnail">
+                      <a href="https://winterville.net" target="_blank">
+                          <img src="../Other/winterville.png" alt="DevSeyfo">
+                          <div class="caption">
+                              <p>WinterVille</p>
+                          </div>
+                      </a>
+                  </div>
+              </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <a href="#">
-                            <img src="../Other/Seyfo.png" alt="DevSeyfo">
-                            <div class="caption">
-                                <p>DevSeyfo Project #2</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <a href="#">
+                        <a href="#" >
                             <img src="../Other/Seyfo.png" alt="DevSeyfo">
                             <div class="caption">
                                 <p>DevSeyfo Project #3</p>
