--- a/tr/calismalarimiz.html
+++ b/tr/calismalarimiz.html
@@ -66,20 +66,20 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="thumbnail" >
-                        <a href="#">
-                            <img src="../Other/Seyfo.png" alt="DevSeyfo" >
+                        <a href="https://taskium.dev"  target="_blank">
+                            <img src="../Other/taskium.png" alt="DevSeyfo" >
                             <div class="caption">
-                                <p>DevSeyfo Proje #1</p>
+                                <p>Taskium Development</p>
                             </div>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <a href="#">
-                            <img src="../Other/Seyfo.png" alt="DevSeyfo">
+                        <a href="https://winterville.net"  target="_blank">
+                            <img src="../Other/winterville.png" alt="DevSeyfo">
                             <div class="caption">
-                                <p>DevSeyfo Proje #2</p>
+                                <p>WinterVille</p>
                             </div>
                         </a>
                     </div>
